# zhaw-ba-online

./: .gitignore  High_Performance_Pitch_Detection.ipynb  README.md  my_crepe.ipynb  pitch_detection_high_performance.ipynb  tfrecord_writer.ipynb
analysis/: workbench_prediction_performance_analysis.ipynb
archive/: High_Performance_Pitch_Detection.ipynb  my_crepe.ipynb  pitch_detection_high_performance.ipynb  tfrecord_writer.ipynb
asp_classic_metrics/: pyproject.toml
asp_classic_metrics/asp_classic_metrics/: __init__.py
crepe/: crepe.ipynb  crepe_test_fad.ipynb
crepe_offline/: crepe.ipynb  crepe_binning.ipynb
deepf0/: DEEP_F0.ipynb  DEEP_F0_FAD.ipynb
local/: pyproject.toml
local/crepe/: config.py  data.py  main.py  model_crepe.py
lstm_offline/: lstm.ipynb
scripts/: .gitignore  pyproject.toml  pyproject.toml.37
scripts/asp_classic/: audio_util.py  calculate_performance_metrics.py  calculate_pitch_estimates.py  config.py  dataset.py  estimations.py  experimenting.py  metrics_from_pickle.py  performance_metrics.py  plot_audio_file.py
scripts/downsampler/: README.md  downsampler.py
scripts/experiment_player/: experiment_player.ipynb  experiment_player.ipynb 
scripts/experimental/: interpolation_error_examination.py
scripts/snr_tester/: snr_tester.py
scripts/spectrogramer/: interpolate.py  spectrogramer.py
scripts/tfrecorder/: count_names  interpolation_error_examination.py  plot_spectrogram_f0.py  tfrecord_reader.py  tfrecord_writer_fad.py  tfrecord_writer_mir1k.py  tfrecord_writer_ptdbtug.py
scripts/tfrecorder/mir1k_analysis/: singers_mir1k.txt
scripts/util/: conversions.py
scripts/zero_pitch_accuracy/: zero_pitch_accuracy.py
src/jupyter/: pitch_detection_high_performance.ipynb
util/downsampler/: .gitignore  downsampler.py  pyproject.toml
util/ref-rapt/: pyproject.toml
util/ref-rapt/ref_rapt/: audio_util.py  calculate_performance_metrics.py  calculate_pitch_estimates.py  config.py  dataset.py  estimations.py  main.py  performance_metrics.py  ref_rapt.py  util.py
util/ref-rapt/tests/: test_ref_rapt.py
util/snr-tester/: pyproject.toml  snr_tester.py
util/spectrogramer/: pyproject.toml
util/spectrogramer/data/: .gitignore
util/spectrogramer/spectrogramer/: interpolate.py  spectrogramer.py
util/spectrogramer/tests/: test_spectrogramer.py
util/tfrecorder/: .gitignore  pyproject.toml  singers_mir1k.txt  tfrecord_writer.py  tfrecord_writer_mir1k.py
