[tool.poetry]
name = "asp_classic_metrics"
version = "0.1.0"
description = ""
authors = ["Kaspar <kaspar.wolfisberg@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.7"
rt-pie-lib = "^0.1.12"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
