[tool.poetry]
name = "local"
version = "0.1.0"
description = ""
authors = ["Kaspar <kaspar.wolfisberg@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
scipy = "^1.6.2"
numpy = "^1.19"
tensorflow = "^2.4.1"
matplotlib = "^3.4.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
