[tool.poetry]
name = "downsampler"
version = "0.1.0"
description = ""
authors = ["Kaspar Wolfisberg <kaspar.wolfisberg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
librosa = "^0.8.0"
SoundFile = "^0.10.3"
numpy = "^1.20.1"
scipy = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
