[tool.poetry]
name = "ref-rapt"
version = "0.1.0"
description = ""
authors = ["Kaspar <kaspar.wolfisberg@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
librosa = "^0.8.0"
scipy = "^1.6.2"
numpy = "~1.19"
tensorflow = "^2.4.1"
mir_eval = "^0.6"
matplotlib = "^3.4.1"
pysptk = "^0.1.18"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.7.4"
autopep8 = "^1.5.6"
rope = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
