[tool.poetry]
name = "snr-tester"
version = "0.1.0"
description = ""
authors = ["Kaspar <kaspar.wolfisberg@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
librosa = "^0.8.0"
playsound = "^1.2.2"
SoundFile = "^0.10.3"
tensorflow = "^2.4.1"
numpy = "~1.19"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
