[tool.poetry]
name = "spectrogramer"
version = "0.1.0"
description = ""
authors = ["Kaspar <kaspar.wolfisberg@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.8"
scipy = "^1.6.2"
matplotlib = "^3.4.1"
librosa = "^0.8.0"
numpy = "^1.20.2"
mir_eval = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
